1999-03-04  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* ActionGroup.m ([GroupPermutedIndex_c +createBegin:]):
	Call allocIVars: with [self getClass] as an arguments instead of 
	self and setClass to self.

1999-03-03  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* ActionGroup.m ([GroupPermutedIndex_c +createBegin:]): Use getCZone
	instead of getComponentZone: method.
	([GroupPermutedIndex_c -createEnd]): Likewise.
	
1999-03-02  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* ActionGroup.m ([GroupPermutedIndex_c +createBegin:]): Use 
	allocIVars: instead of call to [cuper createBegin:].
	([GroupPermutedIndex_c -createEnd]): Call [collection createEnd]
	instead of [super createEnd].
	([GroupPermutedIndex_c -createEnd]): Call setMappedAlloc on self.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, AGE): Increment.  Version 1.4.1.

1999-02-06  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* CompoundAction.m (setDefaultOrder): Add setDefaultOrder function.

	* CompoundAction.h: Add setDefaultOrder function.

	* Action.m ([ActionForEach_1 -setDefaultOrder:]): Use 
	setDefaultOrder function. 
	
	* Action.m ([ActionForEach_1 -setDefaultOrder:]): Likewise.

	* Action.m ([ActionForEach_2 -setDefaultOrder:]): Likewise.
	
	* Schedule.m (createGroup): Use create: instead of createBegin:
	and createEnd: to avoid customization problems.

1999-02-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* activity.h (Schedule): Declare -setKeepEmptyFlag:.

	* Schedule.[hm] ([Schedule_c +createBegin:]): New method (set
	keepEmptyFlag default to YES). 
	([ConcurrentSchedule_c +createBegin:]): New method,
	set keepEmptyFlag default to NO.

	* Schedule.h (Schedule_c): Rename keep -> keepEmptyFlag.

	* XActivity.h (Activity_c): Likewise.

	* Schedule.m ([Schedule_c -_activateUnderSwarm_:::]),
	XActivity.m ([Activity_c -_run_]): Accommodate.

	* XActivity.[hm], Schedule.[hm]: Rename setKeepEmpty ->
	setKeepEmptyFlag.
